--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,3 +21,6 @@ bind-key v split-window -h
 bind-key s split-window -v
 
 bind r source-file ~/.tmux.conf
+
+# Themes
+source-file "${HOME}/.tmux-themepack/powerline/double/blue.tmuxtheme"
